force-app/main/default/objects/SFAndSAPStatusMapping__mdt/SFAndSAPStatusMapping__mdt.object-meta.xml
<CustomObject>
    <description>Created as Part of SFI-1791</description>
    <label>SF And SAP Status Mapping</label>
    <pluralLabel>SF And SAP Status Mappings</pluralLabel>
</CustomObject>