force-app/main/default/objects/SFAndSAPStatusMapping__mdt/fields/FSM_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFI-1791</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>