force-app/main/default/objects/SFAndSAPStatusMapping__mdt/fields/FSM_SAPStatusCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_SAPStatusCode__c</fullName>
    <description>Created as part of SFI-1791</description>
    <label>SAP Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RELS</fullName>
                <default>true</default>
                <label>RELS</label>
            </value>
            <value>
                <fullName>DISP</fullName>
            </value>
            <value>
                <fullName>ARVD</fullName>
            </value>
            <value>
                <fullName>ACPT</fullName>
            </value>
            <value>
                <fullName>RJTD</fullName>
            </value>
            <value>
                <fullName>SUNR</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>CANC</fullName>
            </value>
            <value>
                <fullName>PARK</fullName>
            </value>
            <value>
                <fullName>RTSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>