force-app/main/default/objects/SFAndSAPStatusMapping__mdt/fields/FSM_WOStatus__c.field-meta.xml
<CustomField>
    <fullName>FSM_WOStatus__c</fullName>
    <description>Created as part of SFI-1791</description>
    <label>Work Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>En-Route</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Return to Site</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>